[gd_scene load_steps=10 format=2]

[ext_resource path="res://Objects/Trim.tscn" type="PackedScene" id=1]
[ext_resource path="res://Room/Level.gd" type="Script" id=2]
[ext_resource path="res://Objects/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Tiles.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/Transition.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=4]
resource_local_to_scene = true
extents = Vector2( 16, 64 )

[sub_resource type="RectangleShape2D" id=5]
resource_local_to_scene = true
extents = Vector2( 64, 16 )

[sub_resource type="RectangleShape2D" id=6]
resource_local_to_scene = true
extents = Vector2( 64, 16 )

[sub_resource type="RectangleShape2D" id=7]
resource_local_to_scene = true
extents = Vector2( 16, 64 )

[node name="HallwayWest" type="Node"]
script = ExtResource( 2 )

[node name="Tiles" parent="." instance=ExtResource( 4 )]

[node name="TileMap" parent="Tiles" index="1"]
tile_data = PoolIntArray( 13, 8, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 8, 0, 65549, 8, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 8, 0, 131085, 8, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 8, 0, 196621, 8, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 8, 0, 262157, 8, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 8, 0, 327693, 8, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 8, 0, 393216, 13, 0, 393217, 13, 0, 393218, 13, 0, 393219, 13, 0, 393220, 13, 0, 393221, 13, 0, 393222, 13, 0, 393223, 13, 0, 393224, 13, 0, 393225, 13, 0, 393226, 13, 0, 393227, 13, 0, 393228, 13, 0, 393229, 11, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 12, 0, 393235, 13, 0, 393236, 13, 0, 393237, 13, 0, 393238, 13, 0, 393239, 13, 0, 393240, 13, 0, 393241, 13, 0, 393242, 13, 0, 393243, 13, 0, 393244, 13, 0, 393245, 13, 0, 393246, 13, 0, 393247, 13, 0, 458752, 14, 0, 458753, 14, 0, 458754, 14, 0, 458755, 14, 0, 458756, 14, 0, 458757, 14, 0, 458758, 14, 0, 458759, 14, 0, 458760, 14, 0, 458761, 14, 0, 458762, 14, 0, 458763, 14, 0, 458764, 14, 0, 458765, 14, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 14, 0, 458771, 14, 0, 458772, 14, 0, 458773, 14, 0, 458774, 14, 0, 458775, 14, 0, 458776, 14, 0, 458777, 14, 0, 458778, 14, 0, 458779, 14, 0, 458780, 14, 0, 458781, 14, 0, 458782, 14, 0, 458783, 14, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 524311, 1, 0, 524312, 1, 0, 524313, 1, 0, 524314, 1, 0, 524315, 1, 0, 524316, 1, 0, 524317, 1, 0, 524318, 1, 0, 524319, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 589847, 1, 0, 589848, 1, 0, 589849, 1, 0, 589850, 1, 0, 589851, 1, 0, 589852, 1, 0, 589853, 1, 0, 589854, 1, 0, 589855, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 655380, 1, 0, 655381, 1, 0, 655382, 1, 0, 655383, 1, 0, 655384, 1, 0, 655385, 1, 0, 655386, 1, 0, 655387, 1, 0, 655388, 1, 0, 655389, 1, 0, 655390, 1, 0, 655391, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 720919, 1, 0, 720920, 1, 0, 720921, 1, 0, 720922, 1, 0, 720923, 1, 0, 720924, 1, 0, 720925, 1, 0, 720926, 1, 0, 720927, 1, 0, 786432, 13, 0, 786433, 13, 0, 786434, 13, 0, 786435, 13, 0, 786436, 13, 0, 786437, 13, 0, 786438, 13, 0, 786439, 13, 0, 786440, 13, 0, 786441, 13, 0, 786442, 13, 0, 786443, 13, 0, 786444, 13, 0, 786445, 9, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 10, 0, 786451, 13, 0, 786452, 13, 0, 786453, 13, 0, 786454, 13, 0, 786455, 13, 0, 786456, 13, 0, 786457, 13, 0, 786458, 13, 0, 786459, 13, 0, 786460, 13, 0, 786461, 13, 0, 786462, 13, 0, 786463, 13, 0, 851981, 8, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 8, 0, 917517, 8, 0, 917518, 1, 0, 917519, 1, 0, 917520, 1, 0, 917521, 1, 0, 917522, 8, 0, 983053, 8, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 1, 0, 983058, 8, 0, 1048589, 8, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 1, 0, 1048593, 1, 0, 1048594, 8, 0, 1114125, 8, 0, 1114126, 1, 0, 1114127, 1, 0, 1114128, 1, 0, 1114129, 1, 0, 1114130, 8, 0, 1179661, 8, 0, 1179662, 1, 0, 1179663, 1, 0, 1179664, 1, 0, 1179665, 1, 0, 1179666, 8, 0, 1245197, 8, 0, 1245198, 1, 0, 1245199, 1, 0, 1245200, 1, 0, 1245201, 1, 0, 1245202, 8, 0 )

[node name="Trim" parent="." instance=ExtResource( 1 )]

[node name="TileMap" parent="Trim" index="1"]
tile_data = PoolIntArray( 14, 3, 0, 17, 4, 0, 65550, 3, 0, 65553, 4, 0, 131086, 3, 0, 131089, 4, 0, 196622, 3, 0, 196625, 4, 0, 262158, 3, 0, 262161, 4, 0, 327694, 3, 0, 327697, 4, 0, 393230, 3, 0, 393233, 4, 0, 458766, 3, 0, 458769, 4, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 8, 0, 524305, 7, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 786446, 6, 0, 786449, 5, 0, 851982, 3, 0, 851985, 4, 0, 917518, 3, 0, 917521, 4, 0, 983054, 3, 0, 983057, 4, 0, 1048590, 3, 0, 1048593, 4, 0, 1114126, 3, 0, 1114129, 4, 0, 1179662, 3, 0, 1179665, 4, 0, 1245198, 3, 0, 1245201, 4, 0 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 513, 317 )

[node name="Bridge" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 256 )
target_room = 8
this_room = 10

[node name="Overlap" parent="Bridge" index="0"]
position = Vector2( 16, 64 )
shape = SubResource( 4 )

[node name="CargoBay" parent="." instance=ExtResource( 5 )]
position = Vector2( 448, 608 )
target_room = 9
this_room = 10

[node name="Overlap" parent="CargoBay" index="0"]
position = Vector2( 64, 16 )
shape = SubResource( 5 )

[node name="Security" parent="." instance=ExtResource( 5 )]
position = Vector2( 448, 0 )
target_room = 4
this_room = 10

[node name="Overlap" parent="Security" index="0"]
position = Vector2( 64, 16 )
shape = SubResource( 6 )

[node name="HallwayEast" parent="." instance=ExtResource( 5 )]
position = Vector2( 992, 256 )
target_room = 11
this_room = 10

[node name="Overlap" parent="HallwayEast" index="0"]
position = Vector2( 16, 64 )
shape = SubResource( 7 )

[editable path="Tiles"]
[editable path="Trim"]
[editable path="Bridge"]
[editable path="CargoBay"]
[editable path="Security"]
[editable path="HallwayEast"]
